[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-optislang-core"
version = "0.2.dev0"
description = "A python wrapper for ansys optislang application."
readme = "README.rst"
requires-python = ">=3.7,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.support@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "importlib-metadata >=4.0",
    "psutil >=5.9"
]

[project.optional-dependencies]
test = [
    "pytest>=7.1.3",
    "pytest-cov>=3.0.0",
]
doc = [
    "ansys-sphinx-theme>=0.8.2",
    "matplotlib>=3.5.3",
    "numpydoc>=1.4.0",
    "pypandoc>=1.8.1",
    "Sphinx>=5.1.1,<6",
    "sphinx-copybutton>=0.5.0",
    "sphinx-gallery>=0.11.1",
    "sphinxcontrib-images>=0.9.4",
]
build = [
    "build>=0.8.0",
    "twine>=4.0.1",
]

[tool.flit.module]
name = "ansys.optislang.core"

[project.urls]
Homepage = "https://optislang.docs.pyansys.com"
Documentation = "https://optislang.docs.pyansys.com"
Source = "https://github.com/pyansys/pyoptislang"
Tracker = "https://github.com/pyansys/pyoptislang/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.optislang"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = ".cov/html"

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.pytest.ini_options]
markers = [
    "local_osl: local optiSLang process is used",
]
