[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-optislang-core"
version = "0.6.2"
description = "A Python wrapper for Ansys optiSLang application."
readme = "README.rst"
requires-python = ">=3.7,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "PyAnsys developers", email = "pyansys.maintainers@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "importlib-metadata>=4.0,<8",
    "psutil>=5.9",
    "Deprecated>=1.2.14",
]

[project.optional-dependencies]
tests = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "matplotlib>=3.5.3",
]
doc = [
    "ansys-sphinx-theme==0.13.1",
    "matplotlib==3.8.2",
    "numpydoc==1.6.0",
    "pypandoc==1.12",
    "Sphinx==7.2.6",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.15.0",
    "sphinxcontrib-images==0.9.4",
]
build = [
    "build>=0.8.0",
    "twine>=4.0.1",
]

[tool.flit.module]
name = "ansys.optislang.core"

[project.urls]
Homepage = "https://optislang.docs.pyansys.com"
Documentation = "https://optislang.docs.pyansys.com"
Source = "https://github.com/ansys/pyoptislang"
Tracker = "https://github.com/ansys/pyoptislang/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.optislang"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = ".cov/html"

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.pytest.ini_options]
markers = [
    "local_osl: local optiSLang process is used",
]
