[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-optislang-core"
version = "1.4.0"
description = "A Python wrapper for Ansys optiSLang application."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]
maintainers = [
    {name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "psutil>=5.9",
    "Deprecated>=1.2.14",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
tests = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "matplotlib>=3.5.3",
]
doc = [
    "ansys-sphinx-theme==1.6.4",
    "matplotlib==3.10.1",
    "numpydoc==1.9.0",
    "pypandoc==1.16.2",
    "quarto-cli==1.8.25",
    "Sphinx==8.2.3",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.19.0",
]
build = [
    "build>=0.8.0",
    "twine>=4.0.1",
]
typing = [
    "mypy==1.19.0",
    "types-Deprecated",
    "types-psutil"
]

[tool.flit.module]
name = "ansys.optislang"

[project.urls]
Homepage = "https://optislang.docs.pyansys.com"
Documentation = "https://optislang.docs.pyansys.com"
Source = "https://github.com/ansys/pyoptislang"
Tracker = "https://github.com/ansys/pyoptislang/issues"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]

[tool.coverage.run]
source = ["ansys.optislang"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = ".cov/html"

[tool.coverage.xml]
output = ".cov/coverage.xml"

[tool.pytest.ini_options]
markers = [
    "local_osl: local optiSLang process is used",
]

[tool.codespell]
ignore-words = "doc/styles/config/vocabularies/ANSYS/accept.txt"
skip = "CONTRIBUTORS.md"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src"
explicit_package_bases = true
exclude = ["00_run_script"]

[tool.bandit]
exclude_dirs = ["tests", "src/ansys/optislang/core/examples"]
skips = [
    "B110",
    "B404",
    ]
